# lp-practice-hairtalk

./: .env.example  .gitignore  CLAUDE.md  Code.gs  Dockerfile  Makefile  README.md  docker-compose.yml  index.html  pyproject.toml
assets/: main.js  styles.css
